<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Roommates</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="unknown_user">Unknown User</string>
    <string name="empty_currency">0.00</string>
    <string name="scroll_table_summary_header">Summary</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="summary_button_text">Summary Of Bills</string>
    <string name="summary_button_grocery">Split Grocery</string>
    <string name="rent_label">Rent</string>
    <string name="add">add</string>
    <string name="utility_label">Utilities</string>
    <string name="add_utility_btn">Add Utility</string>
    <string name="amount_due">Amount Due</string>
    <string name="due_date_label">Due Date</string>
    <string name="empty_date">12-01-15</string>
    <string name="pay_bill_text">Pay Bill</string>
    
    </resources>
