<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="5dp" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="6"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:text="@string/unknown_user" >
        </EditText>

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImageView"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="6"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal"
            android:text="@string/empty_currency" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/header" >

        <!--
 calendar
        	summary of charges
        	grocery split
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/summary_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/scroll_table_summary_header" />

            <Button
                android:id="@+id/dashboard_calendar_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/calendar_button_text" />

            <Button
                android:id="@+id/dashboard_summary_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/summary_button_text" />

            <Button
                android:id="@+id/dashboard_grocery_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/summary_button_grocery" />
        </LinearLayout>
	</ScrollView>
</RelativeLayout>