<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rent_label" />

        <TextView
            android:id="@+id/rent_amount_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_currency" />

        <TextView
            android:id="@+id/utilities_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/utility_label" />

        <TextView
            android:id="@+id/utilities_amount_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_currency" />
    </LinearLayout>

    <ListView
        android:id="@+id/utilities_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_utility_button"
        android:layout_below="@id/header_layout"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/add_utility_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:ems="6" />

</RelativeLayout>